--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -84,6 +84,9 @@
   .f-direction-column {
     flex-direction: column;
   }
+  header .image-wrapper img {
+    width: 95px;
+  }
 }
 
 /* Small - Medium */
