--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1195,7 +1195,7 @@ main #experience .hires-container .title {
   margin-left: 10rem;
 }
 #service-panel .main-card {
-  background-image: url("../img/sub-sections/service-card-bg.png");
+  background-image: url("../img/xidmetler.jpeg");
   background-position: bottom;
   background-size: contain;
   background-repeat: no-repeat;
