--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -210,6 +210,9 @@
   .related-articles {
     padding-left: 0;
   }
+  #form-contact textarea {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 1100px) {
   main #info-firm .firm-image .firm-title {
