--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -153,6 +153,18 @@
     margin: 45px 0;
     text-align: center;
   }
+  .swiper-backface-hidden .swiper-slide {
+    padding: 10px;
+  }
+  main #info-firm .firm-image {
+    height: 400px;
+  }
+  #info-firm {
+    margin-top: 30px;
+  }
+  main #info-firm .link-item .link-text a {
+    padding: 15px;
+  }
 }
 
 /* Large */
