--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1172,7 +1172,7 @@ main #experience .hires-container .title {
   overflow: hidden;
 }
 .background {
-  background-image: url("../img/sub-sections/banner-breadcrumb.webp");
+  background-image: url("../img/banner1.jpg");
   background-repeat: no-repeat;
   background-size: 600px;
   background-position: right;
