--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -13,7 +13,7 @@
     padding: 0;
   }
   .background {
-    background-color: #4f2d7fd8;
+    background-color: #1db954;
     background-blend-mode: multiply;
     background-size: 300px;
   }
@@ -165,6 +165,12 @@
   main #info-firm .link-item .link-text a {
     padding: 15px;
   }
+  footer .accardion .accardion-title p {
+    font-size: 2.5rem;
+  }
+  .mt-input-mobile {
+    margin: 30px 0;
+  }
 }
 
 /* Large */
@@ -245,6 +251,15 @@
   }
   .pl-80 {
     padding-left: 10px;
+  }
+  footer .footer-text {
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+  .mobile-icon-pos {
+    margin: 40px 20px;
   }
 }
 @media screen and (max-width: 1100px) {
