--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1049,9 +1049,8 @@ main #experience .hires-container .title {
 .personel-card-title {
   font-size: 1.4rem;
   line-height: 1.7rem;
-  font-weight: 400;
+  font-weight: bold;
   letter-spacing: 0.5rem;
-  text-transform: uppercase;
 }
 .personel-card-info {
   font-size: 2.5rem;
