--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -712,7 +712,7 @@ main #card-slider {
   background: #f5f3f2;
 }
 main .article-swiper {
-  margin: 6rem 0;
+  margin: 1rem 0 5rem 0;
 }
 
 main .article-swiper .main-card {
