--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -22,9 +22,9 @@
     letter-spacing: 3px;
     color: #fff;
   }
-  .breadcrumb--text {
+  /* .breadcrumb--text {
     font-size: 4.5rem;
-  }
+  } */
   .pos-rel .swiper-title h1 {
     font-size: 4.2rem;
   }
@@ -95,10 +95,16 @@
   main #experience .grad-container {
     margin-right: 126px !important;
   }
+  main #experience .hires-container {
+    margin-right: 138px !important;
+  }
 }
 @media (min-width: 361px) and (max-width: 375px) {
   main #experience .grad-container {
     margin-right: 146px !important;
+  }
+  main #experience .hires-container {
+    margin-right: 165px !important;
   }
 }
 @media (max-width: 414px) and (min-width: 375px) {
@@ -279,7 +285,7 @@
     padding-top: 20px;
   }
   .mobile-menu nav a {
-    padding-top: 30px;
+    padding-top: 20px;
   }
   main #info-firm .firm-image .text-wrapper a {
     font-size: 3rem;
@@ -316,6 +322,12 @@
   }
   main #experience .hires-container {
     margin-right: 107px;
+  }
+  .mt-mobile-50 {
+    margin-top: 50px;
+  }
+  header .menu .wrapper {
+    padding: 7px 80px 30px 0;
   }
 }
 
