--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -329,6 +329,9 @@
   header .menu .wrapper {
     padding: 7px 80px 30px 0;
   }
+  .mt-0 {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 992px) and (min-width: 768px) {
