--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -119,6 +119,9 @@
   main #experience .grad-container {
     margin-right: 191px !important;
   }
+  main #experience .hires-container {
+    margin-right: 192px !important;
+  }
 }
 
 /* Medium */
